pov-simple-backup (0.2) UNRELEASED; urgency=low

  * Add back_up_mysql.
  * New option: -s (skip existing backup files).

 -- Marius Gedminas <marius@gedmin.as>  Thu, 29 Aug 2013 10:51:23 +0300

pov-simple-backup (0.1) precise; urgency=low

  * Initial release.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 28 Aug 2013 18:56:41 +0300